--- a/Pagina Web Direccion Empresas/index.html
+++ b/Pagina Web Direccion Empresas/index.html
@@ -81,10 +81,15 @@
         <div class="col-md-12 col-sm-12">
           <label for="problema" class="section-heading text-uppercase" style="font-size:25px"><a href="#" style="font-size: 35px;" data-toggle="modal" data-target="#modalProblem"><i class="fa fa-info-circle"></i></a> Problema:</label>
         </div>
-        <div class="col-md-12 col-sm-12">
+        <div class="col-md-10 col-sm-10">
           <input type="text" name="problema" id="problema" placeholder="Escriba el problema aquí..." class="input_problem">
         </div>
-      </div><hr>
+        <div class="col-md-2 col-sm-2">
+          <a class="btn btn-primary  js-scroll-trigger"  href="#portfolio">Continuar</a>
+        </div>
+      </div>
+
+      <hr>
 
       <div class="text-center">
         <span class="fa-stack fa-4x">
@@ -124,7 +129,7 @@
           <h4 class="modal-title">Problema</h4>
         </div>
         <div class="modal-body">
-          <p>Definición</p>
+          <p>Definición: Cuestión que se plantea para hallar un dato desconocido a partir de otros datos conocidos, o para determinar el método que hay que seguir para obtener un resultado dado</p>
         </div>
         <div class="modal-footer">
           <button type="button" class="btn btn-default" data-dismiss="modal">Cerrar</button>
@@ -148,7 +153,7 @@
         <div class="col-md-12 text-center">
           <h4 class="service-heading"><a href="#" style="font-size: 35px;" data-toggle="modal" data-target="#modalTipsSolutions"><i class="fa fa-info-circle"></i></a> Tips</h4>
         </div>
-        <div class="col-md-11 input_solutions_div">
+        <div class="col-md-10 input_solutions_div">
           <input class="input_solutions" type="text" name="" placeholder="Solución 1" id="S1">
           <input class="input_solutions" type="text" name="" placeholder="Solución 2" id="S2">
           <input class="input_solutions" type="text" name="" placeholder="Solución 3" id="S3">
@@ -158,7 +163,9 @@
           <br><br><br>
           <a class="btn btn-primary disabled" href="#" id="button_minus"><i class="fa fa-minus"></i></a>
         </div>
-
+         <div class="col-md-2 col-sm-2">
+          <a class="btn btn-primary  js-scroll-trigger"  href="#about">Continuar</a>
+        </div>
       </div>
     </div>
   </section>
@@ -173,9 +180,9 @@
           <h4 class="modal-title">Tips</h4>
         </div>
         <div class="modal-body">
-          <p>Tip 1: Lorem Ipsum es simplemente el texto de relleno de las imprentas y archivos de texto. Lorem Ipsum ha sido el texto de relleno estándar de las industrias desde el año 1500, cuando un impresor (N. del T. persona que se dedica a la imprenta) desconocido usó </p>
-          <p>Tip 2: </p>
-          <p>Tip 3: </p>
+          <p>Tip 1: Busca que tus soluciones se enfoquen en la resolucion final del problema. </p>
+          <p>Tip 2: Que sean objetivas. </p>
+          <p>Tip 3: Que sean realistas y tengas la posibilidad de realizarlas. </p>
         </div>
         <div class="modal-footer">
           <button type="button" class="btn btn-default" data-dismiss="modal">Cerrar</button>
@@ -218,6 +225,9 @@
           <h4 class="service-heading"><a href="#" style="font-size: 35px;" data-toggle="modal" data-target="#modalInformation"><i class="fa fa-info-circle"></i></a> Información:</h4>
           <input type="text" name="" placeholder="Criterio" class="input" id="input-C6">
         </div>
+         <div class="col-md-4 col-sm-4">
+          <a class="btn btn-primary   js-scroll-trigger"  href="#team">Continuar</a>
+        </div>
       </div>
     </div>
   </section>
@@ -232,7 +242,7 @@
           <h4 class="modal-title">Objetivo</h4>
         </div>
         <div class="modal-body">
-          <p>Definición</p>
+          <p>Definición: Es a lo que se quiere llegar o lo que se quiere resolver. Es lo primordial del caso.</p>
         </div>
         <div class="modal-footer">
           <button type="button" class="btn btn-default" data-dismiss="modal">Cerrar</button>
@@ -251,7 +261,7 @@
           <h4 class="modal-title">Alternativa</h4>
         </div>
         <div class="modal-body">
-          <p>Definición</p>
+          <p>Definición: Vias posibles en las cuales se puede resolver el problema.</p>
         </div>
         <div class="modal-footer">
           <button type="button" class="btn btn-default" data-dismiss="modal">Cerrar</button>
@@ -270,7 +280,7 @@
           <h4 class="modal-title">Consecuencia</h4>
         </div>
         <div class="modal-body">
-          <p>Definición</p>
+          <p>Definición: Las posibles reacciones de las decisones que se tomen para solucionar el problema.</p>
         </div>
         <div class="modal-footer">
           <button type="button" class="btn btn-default" data-dismiss="modal">Cerrar</button>
@@ -289,7 +299,7 @@
           <h4 class="modal-title">Incertidumbre</h4>
         </div>
         <div class="modal-body">
-          <p>Definición</p>
+          <p>Definición: Lagunas que puedan haber de informacion sobre el caso. </p>
         </div>
         <div class="modal-footer">
           <button type="button" class="btn btn-default" data-dismiss="modal">Cerrar</button>
@@ -308,7 +318,7 @@
           <h4 class="modal-title">Riesgo</h4>
         </div>
         <div class="modal-body">
-          <p>Definición</p>
+          <p>Definición: Proximidad o contingencia de un posible daño.</p>
         </div>
         <div class="modal-footer">
           <button type="button" class="btn btn-default" data-dismiss="modal">Cerrar</button>
@@ -327,7 +337,7 @@
           <h4 class="modal-title">Información</h4>
         </div>
         <div class="modal-body">
-          <p>Definición</p>
+          <p>Definición: Todos los datos recopilados que ayuden en la solución.</p>
         </div>
         <div class="modal-footer">
           <button type="button" class="btn btn-default" data-dismiss="modal">Cerrar</button>
@@ -397,7 +407,7 @@
               <td id="I3"><input type="number" value="0" class="input_matrix" min="0" max="5"> </td>
             </tr>
             <tr class="table-total">
-              <th><a class="btn btn-primary" href="#" id="total">Total</a></th>
+              <th><a class="btn btn-primary" href="#solution" id="total">Resolver</a></th>
               <td id="T1"></td>
               <td id="T2"></td>
               <td id="T3"></td>
