--- a/Pagina Web Direccion Empresas/index.html
+++ b/Pagina Web Direccion Empresas/index.html
@@ -62,7 +62,7 @@
     <div class="container">
       <div class="intro-text">
         <div class="intro-lead-in">Dirección de Empresas</i></div><br>
-        <div class="intro-lead-in text-uppercase">¡Da clic para empezar a resolver tu caso!</div>
+        <div class="intro-lead-in text-uppercase">¡Da clic para empezar a resolver tu problema!</div>
         <a class="btn btn-primary btn-xl text-uppercase js-scroll-trigger" href="#services">¡Empezar!</a>
       </div>
     </div>
@@ -78,15 +78,15 @@
         </div>
       </div>
       <div class="row">
-        <div class="col-md-12 col-sm-12">
-          <label for="problema" class="section-heading text-uppercase" style="font-size:25px"><a href="#" style="font-size: 35px;" data-toggle="modal" data-target="#modalProblem"><i class="fa fa-info-circle"></i></a> Problema:</label>
-        </div>
-        <div class="col-md-10 col-sm-10">
-          <input type="text" name="problema" id="problema" placeholder="Escriba el problema aquí..." class="input_problem">
-        </div>
-        <div class="col-md-2 col-sm-2">
-          <a class="btn btn-primary  js-scroll-trigger"  href="#portfolio">Continuar</a>
-        </div>
+        <div class="col-md-3 col-sm-3 field-main-problem"> <p>Económico</p> </div>
+
+        <div class="col-md-3 col-sm-3 field-main-problem"> <p>Personal</p> </div>
+
+        <div class="col-md-3 col-sm-3 field-main-problem"> <p>Producción</p> </div>
+
+        <div class="col-md-3 col-sm-3 field-main-problem"> <p>Modelo Económico</p> </div>
+
+        <div class="col-md-3 col-sm-3 field-main-problem"> <p>Modelo Económico</p> </div>
       </div>
 
       <hr>
@@ -116,6 +116,22 @@
           <h4 class="service-heading"><i class="fa fa-eye" aria-hidden="true"></i> No es el primero que encuentras</h4>
           <p class="text-muted">No te quedes con el primer problema que veas porque generalmente no es, analiza la situación varias veces hasta que realmente veas el problema o pule el problema hasta hacerlo un problema claro. </p>
         </div>
+        <div class="col-lg-12 text-center">
+          <hr>
+          <h2 class="section-heading text-uppercase"><i class="fa fa-gavel" aria-hidden="true"></i>SubProblema</h2>
+        </div>
+      </div>
+      <div class="row">
+        <div class="col-md-3 col-sm-3 field-main-problem"> <p>Económico</p> </div>
+
+        <div class="col-md-3 col-sm-3 field-main-problem"> <p>Personal</p> </div>
+
+        <div class="col-md-3 col-sm-3 field-main-problem"> <p>Producción</p> </div>
+
+        <div class="col-md-3 col-sm-3 field-main-problem"> <p>Modelo Económico</p> </div>
+
+        <div class="col-md-3 col-sm-3 field-main-problem"> <p>Modelo Económico</p> </div>
+      </div>
       </div>
     </div>
   </section>
@@ -140,59 +156,9 @@
   </div>
 
   <hr>
-  <!-- Solutions -->
-  <section id="portfolio">
-    <div class="container">
-      <div class="row">
-        <div class="col-lg-12 text-center">
-          <h2 class="section-heading text-uppercase"><i class="fa fa-lightbulb-o" aria-hidden="true"></i> Soluciones</h2>
-          <h3 class="section-subheading text-muted">Definición de posibles soluciones <br>(mínimo 3 y máximo 5)</h3>
-        </div>
-      </div>
-      <div class="row">
-        <div class="col-md-12 text-center">
-          <h4 class="service-heading"><a href="#" style="font-size: 35px;" data-toggle="modal" data-target="#modalTipsSolutions"><i class="fa fa-info-circle"></i></a> Tips</h4>
-        </div>
-        <div class="col-md-10 input_solutions_div">
-          <input class="input_solutions" type="text" name="" placeholder="Solución 1" id="S1">
-          <input class="input_solutions" type="text" name="" placeholder="Solución 2" id="S2">
-          <input class="input_solutions" type="text" name="" placeholder="Solución 3" id="S3">
-        </div>
-        <div class="col-md-1" style="height: 100%;">
-          <a class="btn btn-primary" href="#" id="button_plus"><i class="fa fa-plus"></i></a>
-          <br><br><br>
-          <a class="btn btn-primary disabled" href="#" id="button_minus"><i class="fa fa-minus"></i></a>
-        </div>
-         <div class="col-md-2 col-sm-2">
-          <a class="btn btn-primary  js-scroll-trigger"  href="#about">Continuar</a>
-        </div>
-      </div>
-    </div>
-  </section>
-  <hr>
 
-  <div id="modalTipsSolutions" class="modal fade" role="dialog">
-    <div class="modal-dialog">
-
-      <!-- Modal content-->
-      <div class="modal-content">
-        <div class="modal-header">
-          <h4 class="modal-title">Tips</h4>
-        </div>
-        <div class="modal-body">
-          <p>Tip 1: Busca que tus soluciones se enfoquen en la resolucion final del problema. </p>
-          <p>Tip 2: Que sean objetivas. </p>
-          <p>Tip 3: Que sean realistas y tengas la posibilidad de realizarlas. </p>
-        </div>
-        <div class="modal-footer">
-          <button type="button" class="btn btn-default" data-dismiss="modal">Cerrar</button>
-        </div>
-      </div>
-
-    </div>
-  </div>
   <!-- Criteria -->
-  <section id="about" class="odd">
+  <section id="about" class="even">
     <div class="container">
       <div class="row">
         <div class="col-lg-12 text-center">
@@ -201,152 +167,16 @@
         </div>
       </div>
       <div class="row">
-        <div class="col-md-12">
-          <h4 class="service-heading"><a href="#" style="font-size: 35px;" data-toggle="modal" data-target="#modalObjectives"><i class="fa fa-info-circle"></i></a> Objetivo:</h4>
-          <input type="text" name="" placeholder="Criterio" class="input" id="input-C1">
-        </div>
-        <div class="col-md-12">
-          <h4 class="service-heading"><a href="#" style="font-size: 35px;" data-toggle="modal" data-target="#modalAlternatives"><i class="fa fa-info-circle"></i></a> Alternativas:</h4>
-          <input type="text" name="" placeholder="Criterio" class="input" id="input-C2">
-        </div>
-        <div class="col-md-12">
-          <h4 class="service-heading"><a href="#" style="font-size: 35px;" data-toggle="modal" data-target="#modalConsecuencies"><i class="fa fa-info-circle"></i></a> Consecuencias:</h4>
-          <input type="text" name="" placeholder="Criterio" class="input" id="input-C3">
-        </div>
-        <div class="col-md-12">
-          <h4 class="service-heading"><a href="#" style="font-size: 35px;" data-toggle="modal" data-target="#modalUncertainty"><i class="fa fa-info-circle"></i></a> Incertidumbres:</h4>
-          <input type="text" name="" placeholder="Criterio" class="input" id="input-C4">
-        </div>
-        <div class="col-md-12">
-          <h4 class="service-heading"><a href="#" style="font-size: 35px;" data-toggle="modal" data-target="#modalRisk"><i class="fa fa-info-circle"></i></a> Riesgos:</h4>
-          <input type="text" name="" placeholder="Criterio" class="input" id="input-C5">
-        </div>
-        <div class="col-md-12">
-          <h4 class="service-heading"><a href="#" style="font-size: 35px;" data-toggle="modal" data-target="#modalInformation"><i class="fa fa-info-circle"></i></a> Información:</h4>
-          <input type="text" name="" placeholder="Criterio" class="input" id="input-C6">
-        </div>
-         <div class="col-md-4 col-sm-4">
-          <a class="btn btn-primary   js-scroll-trigger"  href="#team">Continuar</a>
-        </div>
+          <div class="col-md-12 col-sm-12 field-criteria">
+            | <label for="criteria1">Criterio 1 </label> <input type="checkbox" name="criteria1" value="1" id="criteria1"> |
+            <label for="criteria2">Criterio 2 </label> <input type="checkbox" name="criteria2" value="2" id="criteria2"> |
+            <label for="criteria3">Criterio 3 </label> <input type="checkbox" name="criteria3" value="3" id="criteria3"> |
+            <label for="criteria4">Criterio 4 </label> <input type="checkbox" name="criteria4" value="4" id="criteria4"> |
+            <label for="criteria5">Criterio 5 </label> <input type="checkbox" name="criteria5" value="5" id="criteria5"> |
+          </div>
       </div>
     </div>
   </section>
-
-  <!-- Modals -->
-  <div id="modalObjectives" class="modal fade" role="dialog">
-    <div class="modal-dialog">
-
-      <!-- Modal content-->
-      <div class="modal-content">
-        <div class="modal-header">
-          <h4 class="modal-title">Objetivo</h4>
-        </div>
-        <div class="modal-body">
-          <p>Definición: Es a lo que se quiere llegar o lo que se quiere resolver. Es lo primordial del caso.</p>
-        </div>
-        <div class="modal-footer">
-          <button type="button" class="btn btn-default" data-dismiss="modal">Cerrar</button>
-        </div>
-      </div>
-
-    </div>
-  </div>
-
-  <div id="modalAlternatives" class="modal fade" role="dialog">
-    <div class="modal-dialog">
-
-      <!-- Modal content-->
-      <div class="modal-content">
-        <div class="modal-header">
-          <h4 class="modal-title">Alternativa</h4>
-        </div>
-        <div class="modal-body">
-          <p>Definición: Vias posibles en las cuales se puede resolver el problema.</p>
-        </div>
-        <div class="modal-footer">
-          <button type="button" class="btn btn-default" data-dismiss="modal">Cerrar</button>
-        </div>
-      </div>
-
-    </div>
-  </div>
-
-  <div id="modalConsecuencies" class="modal fade" role="dialog">
-    <div class="modal-dialog">
-
-      <!-- Modal content-->
-      <div class="modal-content">
-        <div class="modal-header">
-          <h4 class="modal-title">Consecuencia</h4>
-        </div>
-        <div class="modal-body">
-          <p>Definición: Las posibles reacciones de las decisones que se tomen para solucionar el problema.</p>
-        </div>
-        <div class="modal-footer">
-          <button type="button" class="btn btn-default" data-dismiss="modal">Cerrar</button>
-        </div>
-      </div>
-
-    </div>
-  </div>
-
-  <div id="modalUncertainty" class="modal fade" role="dialog">
-    <div class="modal-dialog">
-
-      <!-- Modal content-->
-      <div class="modal-content">
-        <div class="modal-header">
-          <h4 class="modal-title">Incertidumbre</h4>
-        </div>
-        <div class="modal-body">
-          <p>Definición: Lagunas que puedan haber de informacion sobre el caso. </p>
-        </div>
-        <div class="modal-footer">
-          <button type="button" class="btn btn-default" data-dismiss="modal">Cerrar</button>
-        </div>
-      </div>
-
-    </div>
-  </div>
-
-  <div id="modalRisk" class="modal fade" role="dialog">
-    <div class="modal-dialog">
-
-      <!-- Modal content-->
-      <div class="modal-content">
-        <div class="modal-header">
-          <h4 class="modal-title">Riesgo</h4>
-        </div>
-        <div class="modal-body">
-          <p>Definición: Proximidad o contingencia de un posible daño.</p>
-        </div>
-        <div class="modal-footer">
-          <button type="button" class="btn btn-default" data-dismiss="modal">Cerrar</button>
-        </div>
-      </div>
-
-    </div>
-  </div>
-
-  <div id="modalInformation" class="modal fade" role="dialog">
-    <div class="modal-dialog">
-
-      <!-- Modal content-->
-      <div class="modal-content">
-        <div class="modal-header">
-          <h4 class="modal-title">Información</h4>
-        </div>
-        <div class="modal-body">
-          <p>Definición: Todos los datos recopilados que ayuden en la solución.</p>
-        </div>
-        <div class="modal-footer">
-          <button type="button" class="btn btn-default" data-dismiss="modal">Cerrar</button>
-        </div>
-      </div>
-
-    </div>
-  </div>
-
   <hr>
   <!-- Matriz -->
   <section id="team">
