--- a/Pagina Web Direccion Empresas/index.html
+++ b/Pagina Web Direccion Empresas/index.html
@@ -71,67 +71,75 @@
   <!-- Problem -->
   <section id="services" class="odd">
     <div class="container">
-      <div class="row">
-        <div class="col-lg-12 text-center">
-          <h2 class="section-heading text-uppercase"><i class="fa fa-gavel" aria-hidden="true"></i> Problema</h2>
-          <h3 class="section-subheading text-muted">Definición del Problema</h3>
+
+      <div class="problem">
+        <div class="row">
+          <div class="col-lg-12 text-center">
+            <h2 class="section-heading text-uppercase"><i class="fa fa-gavel" aria-hidden="true"></i> Problema</h2>
+            <h3 class="section-subheading text-muted">Definición del Problema</h3>
+          </div>
         </div>
+        <div class="row">
+          <div class="col-md-3 col-sm-3 field-main-problem"> <p>Económico</p> </div>
+
+          <div class="col-md-3 col-sm-3 field-main-problem"> <p>Personal</p> </div>
+
+          <div class="col-md-3 col-sm-3 field-main-problem"> <p>Producción</p> </div>
+
+          <div class="col-md-3 col-sm-3 field-main-problem"> <p>Modelo Económico</p> </div>
+
+          <div class="col-md-3 col-sm-3 field-main-problem"> <p>Modelo Económico</p> </div>
+        </div>
+
+        <hr>
+
+        <div class="text-center">
+          <span class="fa-stack fa-4x">
+            <i class="fa fa-circle fa-stack-2x text-primary"></i>
+            <i class="fa fa-info fa-stack-1x fa-inverse"></i>
+          </span>
+          <h1 class="service-heading">Tips</h1>
+        </div>
+
+        <div class="row text-center">
+          <div class="col-md-4">
+            <h4 class="service-heading"><i class="fa fa-hand-pointer-o" aria-hidden="true"></i> Un Problema</h4>
+            <p class="text-muted">Sólo existe un problema, normalmente no es el más evidente, sin embargo, quitando el problema solucionas todo lo demás</p>
+          </div>
+          <div class="col-md-4">
+            <h4 class="service-heading"><i class="fa fa-book" aria-hidden="true"></i> No es una historia</h4>
+            <p class="text-muted">No se trata sobre una historia o consecuencias, el problema hasta una palabro un enunciado corto, directo y sencillo</p>
+          </div>
+          <div class="col-md-4">
+            <h4 class="service-heading"><i class="fa fa-money" aria-hidden="true"></i> No es solo dinero</h4>
+            <p class="text-muted">No se trata solamente de problemas económico, el problema puede ser cualquier situción. Puede ser una decisión, una persona, cualquier cosa. No necesariamnete tiene que ser muy técnico o complicado.</p>
+          </div>
+          <div class="col-md-12">
+            <h4 class="service-heading"><i class="fa fa-eye" aria-hidden="true"></i> No es el primero que encuentras</h4>
+            <p class="text-muted">No te quedes con el primer problema que veas porque generalmente no es, analiza la situación varias veces hasta que realmente veas el problema o pule el problema hasta hacerlo un problema claro. </p>
+          </div>
+
       </div>
-      <div class="row">
-        <div class="col-md-3 col-sm-3 field-main-problem"> <p>Económico</p> </div>
 
-        <div class="col-md-3 col-sm-3 field-main-problem"> <p>Personal</p> </div>
+        <div class="subproblem hide">
+          <div class="col-lg-12 text-center">
+            <h2 class="section-heading text-uppercase"><i class="fa fa-gavel" aria-hidden="true"></i>SubProblema</h2>
+          </div>
+          <div class="row">
+            <div class="col-md-3 col-sm-3 field-main-problem"> <p>Económico</p> </div>
 
-        <div class="col-md-3 col-sm-3 field-main-problem"> <p>Producción</p> </div>
+            <div class="col-md-3 col-sm-3 field-main-problem"> <p>Personal</p> </div>
 
-        <div class="col-md-3 col-sm-3 field-main-problem"> <p>Modelo Económico</p> </div>
+            <div class="col-md-3 col-sm-3 field-main-problem"> <p>Producción</p> </div>
 
-        <div class="col-md-3 col-sm-3 field-main-problem"> <p>Modelo Económico</p> </div>
-      </div>
+            <div class="col-md-3 col-sm-3 field-main-problem"> <p>Modelo Económico</p> </div>
 
-      <hr>
-
-      <div class="text-center">
-        <span class="fa-stack fa-4x">
-          <i class="fa fa-circle fa-stack-2x text-primary"></i>
-          <i class="fa fa-info fa-stack-1x fa-inverse"></i>
-        </span>
-        <h1 class="service-heading">Tips</h1>
-      </div>
-
-      <div class="row text-center">
-        <div class="col-md-4">
-          <h4 class="service-heading"><i class="fa fa-hand-pointer-o" aria-hidden="true"></i> Un Problema</h4>
-          <p class="text-muted">Sólo existe un problema, normalmente no es el más evidente, sin embargo, quitando el problema solucionas todo lo demás</p>
+            <div class="col-md-3 col-sm-3 field-main-problem"> <p>Modelo Económico</p> </div>
+          </div>
         </div>
-        <div class="col-md-4">
-          <h4 class="service-heading"><i class="fa fa-book" aria-hidden="true"></i> No es una historia</h4>
-          <p class="text-muted">No se trata sobre una historia o consecuencias, el problema hasta una palabro un enunciado corto, directo y sencillo</p>
-        </div>
-        <div class="col-md-4">
-          <h4 class="service-heading"><i class="fa fa-money" aria-hidden="true"></i> No es solo dinero</h4>
-          <p class="text-muted">No se trata solamente de problemas económico, el problema puede ser cualquier situción. Puede ser una decisión, una persona, cualquier cosa. No necesariamnete tiene que ser muy técnico o complicado.</p>
-        </div>
-        <div class="col-md-12">
-          <h4 class="service-heading"><i class="fa fa-eye" aria-hidden="true"></i> No es el primero que encuentras</h4>
-          <p class="text-muted">No te quedes con el primer problema que veas porque generalmente no es, analiza la situación varias veces hasta que realmente veas el problema o pule el problema hasta hacerlo un problema claro. </p>
-        </div>
-        <div class="col-lg-12 text-center">
-          <hr>
-          <h2 class="section-heading text-uppercase"><i class="fa fa-gavel" aria-hidden="true"></i>SubProblema</h2>
-        </div>
-      </div>
-      <div class="row">
-        <div class="col-md-3 col-sm-3 field-main-problem"> <p>Económico</p> </div>
 
-        <div class="col-md-3 col-sm-3 field-main-problem"> <p>Personal</p> </div>
+        </div>
 
-        <div class="col-md-3 col-sm-3 field-main-problem"> <p>Producción</p> </div>
-
-        <div class="col-md-3 col-sm-3 field-main-problem"> <p>Modelo Económico</p> </div>
-
-        <div class="col-md-3 col-sm-3 field-main-problem"> <p>Modelo Económico</p> </div>
-      </div>
       </div>
     </div>
   </section>
@@ -155,10 +163,9 @@
     </div>
   </div>
 
-  <hr>
 
   <!-- Criteria -->
-  <section id="about" class="even">
+  <section id="about" class="even hide">
     <div class="container">
       <div class="row">
         <div class="col-lg-12 text-center">
@@ -177,9 +184,8 @@
       </div>
     </div>
   </section>
-  <hr>
   <!-- Matriz -->
-  <section id="team">
+  <section id="team" class="hide">
     <div class="container">
       <div class="row">
         <div class="col-lg-12 text-center">
@@ -246,10 +252,9 @@
         </table>
       </div>
     </section>
-    <hr>
 
     <!-- Final Solution -->
-    <section id="solution" class="odd">
+    <section id="solution" class="odd hide">
       <div class="container">
         <div class="row">
           <div class="col-lg-12 text-center">
