--- a/Pagina Web Direccion Empresas/index.html
+++ b/Pagina Web Direccion Empresas/index.html
@@ -38,19 +38,19 @@
       <div class="collapse navbar-collapse" id="navbarResponsive">
         <ul class="navbar-nav text-uppercase ml-auto">
           <li class="nav-item">
-            <a class="nav-link js-scroll-trigger" href="#services">Problema</a>
+            <a class="nav-link js-scroll-trigger" href="#Problem">Problema</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link js-scroll-trigger" href="#portfolio">Soluciones</a>
+            <a class="nav-link js-scroll-trigger" href="#">Soluciones</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link js-scroll-trigger" href="#about">Criterios</a>
+            <a class="nav-link js-scroll-trigger" href="#">Criterios</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link js-scroll-trigger" href="#team">Matriz</a>
+            <a class="nav-link js-scroll-trigger" href="#">Matriz</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link js-scroll-trigger" href="#solution">Solución</a>
+            <a class="nav-link js-scroll-trigger" href="#">Solución</a>
           </li>
         </ul>
       </div>
@@ -69,26 +69,34 @@
   </header>
 
   <!-- Problem -->
-  <section id="services" class="odd">
+  <section id="Problem" class="odd">
     <div class="container">
 
       <div class="problem">
         <div class="row">
           <div class="col-lg-12 text-center">
             <h2 class="section-heading text-uppercase"><i class="fa fa-gavel" aria-hidden="true"></i> Problema</h2>
-            <h3 class="section-subheading text-muted">Definición del Problema</h3>
+            <h3 class="section-subheading text-muted">Seleciona el Problema General</h3>
           </div>
         </div>
         <div class="row">
-          <div class="col-md-3 col-sm-3 field-main-problem"> <p>Económico</p> </div>
+          <div class="col-md-3 col-sm-3 field-main-problem" data-problem="economic"> <p><i class="fa fa-money" aria-hidden="true"></i> Económico</p> </div>
 
-          <div class="col-md-3 col-sm-3 field-main-problem"> <p>Personal</p> </div>
+          <div class="col-md-3 col-sm-3 field-main-problem" data-problem="social"> <p><i class="fa fa-globe" aria-hidden="true"></i> Social</p> </div>
 
-          <div class="col-md-3 col-sm-3 field-main-problem"> <p>Producción</p> </div>
+          <div class="col-md-3 col-sm-3 field-main-problem" data-problem="academic"> <p><i class="fa fa-graduation-cap" aria-hidden="true"></i> Académico</p> </div>
 
-          <div class="col-md-3 col-sm-3 field-main-problem"> <p>Modelo Económico</p> </div>
+          <div class="col-md-3 col-sm-3 field-main-problem" data-problem="personal"> <p><i class="fa fa-user" aria-hidden="true"></i> Personal</p> </div>
 
-          <div class="col-md-3 col-sm-3 field-main-problem"> <p>Modelo Económico</p> </div>
+          <div class="col-md-3 col-sm-3 field-main-problem" data-problem="business"> <p><i class="fa fa-building" aria-hidden="true"></i> Empresa</p> </div>
+
+          <div class="col-md-3 col-sm-3 field-main-problem" data-problem="administration"> <p><i class="fa fa-bar-chart" aria-hidden="true"></i> Administrativo</p> </div>
+
+          <div class="col-md-3 col-sm-3 field-main-problem" data-problem="habits"> <p><i class="fa fa-archive" aria-hidden="true"></i> Hábitos</p> </div>
+
+          <div class="col-md-3 col-sm-3 field-main-problem" data-problem="techo"> <p><i class="fa fa-microchip" aria-hidden="true"></i> Tecnológico</p> </div>
+
+          <div class="col-md-12 col-sm-12 field-main-problem" data-problem="other"> <p><i class="fa fa-list" aria-hidden="true"></i> Otro</p> </div>
         </div>
 
         <hr>
@@ -119,184 +127,173 @@
             <p class="text-muted">No te quedes con el primer problema que veas porque generalmente no es, analiza la situación varias veces hasta que realmente veas el problema o pule el problema hasta hacerlo un problema claro. </p>
           </div>
 
-      </div>
-
-        <div class="subproblem hide">
-          <div class="col-lg-12 text-center">
-            <h2 class="section-heading text-uppercase"><i class="fa fa-gavel" aria-hidden="true"></i>SubProblema</h2>
-          </div>
-          <div class="row">
-            <div class="col-md-3 col-sm-3 field-main-problem"> <p>Económico</p> </div>
-
-            <div class="col-md-3 col-sm-3 field-main-problem"> <p>Personal</p> </div>
-
-            <div class="col-md-3 col-sm-3 field-main-problem"> <p>Producción</p> </div>
-
-            <div class="col-md-3 col-sm-3 field-main-problem"> <p>Modelo Económico</p> </div>
-
-            <div class="col-md-3 col-sm-3 field-main-problem"> <p>Modelo Económico</p> </div>
-          </div>
-        </div>
-
-        </div>
-
-      </div>
-    </div>
-  </section>
-
-  <div id="modalProblem" class="modal fade" role="dialog">
-    <div class="modal-dialog">
-
-      <!-- Modal content-->
-      <div class="modal-content">
-        <div class="modal-header">
-          <h4 class="modal-title">Problema</h4>
-        </div>
-        <div class="modal-body">
-          <p>Definición: Cuestión que se plantea para hallar un dato desconocido a partir de otros datos conocidos, o para determinar el método que hay que seguir para obtener un resultado dado</p>
-        </div>
-        <div class="modal-footer">
-          <button type="button" class="btn btn-default" data-dismiss="modal">Cerrar</button>
         </div>
       </div>
-
+      <div class="subproblem hide">
+        <div class="col-lg-12 text-center">
+          <h2 class="section-heading text-uppercase"><i class="fa fa-gavel" aria-hidden="true"></i>SubProblema</h2>
+          <h3 class="section-subheading text-muted">Seleciona el Problema que más se acerque</h3>
+        </div>
+        <div class="row content-subproblem">
+        </div>
+      </div>
     </div>
   </div>
+</section>
+
+<div id="modalProblem" class="modal fade" role="dialog">
+  <div class="modal-dialog">
+
+    <!-- Modal content-->
+    <div class="modal-content">
+      <div class="modal-header">
+        <h4 class="modal-title">Problema</h4>
+      </div>
+      <div class="modal-body">
+        <p>Definición: Cuestión que se plantea para hallar un dato desconocido a partir de otros datos conocidos, o para determinar el método que hay que seguir para obtener un resultado dado</p>
+      </div>
+      <div class="modal-footer">
+        <button type="button" class="btn btn-default" data-dismiss="modal">Cerrar</button>
+      </div>
+    </div>
+
+  </div>
+</div>
 
 
-  <!-- Criteria -->
-  <section id="about" class="even hide">
+<!-- Criteria -->
+<section id="about" class="even hide">
+  <div class="container">
+    <div class="row">
+      <div class="col-lg-12 text-center">
+        <h2 class="section-heading text-uppercase"><i class="fa fa-cogs" aria-hidden="true"></i> Criterios de evaluación</h2>
+        <h3 class="section-subheading text-muted">Criterios para poder evaluar el problema</h3>
+      </div>
+    </div>
+    <div class="row">
+      <div class="col-md-12 col-sm-12 field-criteria">
+        | <label for="criteria1">Criterio 1 </label> <input type="checkbox" name="criteria1" value="1" id="criteria1"> |
+        <label for="criteria2">Criterio 2 </label> <input type="checkbox" name="criteria2" value="2" id="criteria2"> |
+        <label for="criteria3">Criterio 3 </label> <input type="checkbox" name="criteria3" value="3" id="criteria3"> |
+        <label for="criteria4">Criterio 4 </label> <input type="checkbox" name="criteria4" value="4" id="criteria4"> |
+        <label for="criteria5">Criterio 5 </label> <input type="checkbox" name="criteria5" value="5" id="criteria5"> |
+      </div>
+    </div>
+  </div>
+</section>
+<!-- Matriz -->
+<section id="team" class="hide">
+  <div class="container">
+    <div class="row">
+      <div class="col-lg-12 text-center">
+        <h2 class="section-heading text-uppercase"><i class="fa fa-table" aria-hidden="true"></i> Matriz</h2>
+        <h3 class="section-subheading text-muted">Generador de Matriz</h3>
+        <a class="btn btn-primary btn-xl" href="#" id="matrix">Generar matriz <i class="fa fa-pie-chart" aria-hidden="true"></i></a>
+      </div>
+    </div>
+    <br>
+    <div class="row">
+      <table class="table table-bordered hide" id="dataTable" width="100%" cellspacing="0">
+        <thead class="text-center">
+          <tr class="table-header">
+            <th><i class="fa fa-cogs"></i> Criterios</th>
+            <th id="H1">Solución 1</th>
+            <th id="H2">Solución 2</th>
+            <th id="H3">Solución 3</th>
+          </tr>
+        </thead>
+        <tbody class="text-center">
+          <tr class="table-objectives">
+            <td id="Ti1">Objetivo</td>
+            <td id="O1"> <input type="number" value="0" class="input_matrix" min="0" max="5"> </td>
+            <td id="O2"> <input type="number" value="0" class="input_matrix" min="0" max="5"> </td>
+            <td id="O3"> <input type="number" value="0" class="input_matrix" min="0" max="5"> </td>
+          </tr>
+          <tr class="table-alternatives">
+            <td id="Ti2">Alternativa</td>
+            <td id="A1"><input type="number" value="0" class="input_matrix" min="0" max="5"> </td>
+            <td id="A2"><input type="number" value="0" class="input_matrix" min="0" max="5"> </td>
+            <td id="A3"><input type="number" value="0" class="input_matrix" min="0" max="5"> </td>
+          </tr>
+          <tr class="table-consecuencies">
+            <td id="Ti3">Consecuencia</td>
+            <td id="C1"><input type="number" value="0" class="input_matrix" min="0" max="5"> </td>
+            <td id="C2"><input type="number" value="0" class="input_matrix" min="0" max="5"> </td>
+            <td id="C3"><input type="number" value="0" class="input_matrix" min="0" max="5"> </td>
+          </tr>
+          <tr class="table-uncertainty">
+            <td id="Ti4">Incertidumbre</td>
+            <td id="U1"><input type="number" value="0" class="input_matrix" min="0" max="5"> </td>
+            <td id="U2"><input type="number" value="0" class="input_matrix" min="0" max="5"> </td>
+            <td id="U3"><input type="number" value="0" class="input_matrix" min="0" max="5"> </td>
+          </tr>
+          <tr class="table-risk">
+            <td id="Ti5">Riesgo</td>
+            <td id="R1"><input type="number" value="0" class="input_matrix" min="0" max="5"> </td>
+            <td id="R2"><input type="number" value="0" class="input_matrix" min="0" max="5"> </td>
+            <td id="R3"><input type="number" value="0" class="input_matrix" min="0" max="5"> </td>
+          </tr>
+          <tr class="table-information">
+            <td id="Ti6">Información</td>
+            <td id="I1"><input type="number" value="0" class="input_matrix" min="0" max="5"> </td>
+            <td id="I2"><input type="number" value="0" class="input_matrix" min="0" max="5"> </td>
+            <td id="I3"><input type="number" value="0" class="input_matrix" min="0" max="5"> </td>
+          </tr>
+          <tr class="table-total">
+            <th><a class="btn btn-primary" href="#solution" id="total">Resolver</a></th>
+            <td id="T1"></td>
+            <td id="T2"></td>
+            <td id="T3"></td>
+          </tr>
+        </tbody>
+      </table>
+    </div>
+  </section>
+
+  <!-- Final Solution -->
+  <section id="solution" class="odd hide">
     <div class="container">
       <div class="row">
         <div class="col-lg-12 text-center">
-          <h2 class="section-heading text-uppercase"><i class="fa fa-cogs" aria-hidden="true"></i> Criterios de evaluación</h2>
-          <h3 class="section-subheading text-muted">Criterios para poder evaluar el problema</h3>
+          <h2 class="section-heading text-uppercase"><i class="fa fa-area-chart" aria-hidden="true"></i> Solución</h2>
+          <h3 class="section-subheading text-muted">Resolución final</h3>
         </div>
       </div>
-      <div class="row">
-          <div class="col-md-12 col-sm-12 field-criteria">
-            | <label for="criteria1">Criterio 1 </label> <input type="checkbox" name="criteria1" value="1" id="criteria1"> |
-            <label for="criteria2">Criterio 2 </label> <input type="checkbox" name="criteria2" value="2" id="criteria2"> |
-            <label for="criteria3">Criterio 3 </label> <input type="checkbox" name="criteria3" value="3" id="criteria3"> |
-            <label for="criteria4">Criterio 4 </label> <input type="checkbox" name="criteria4" value="4" id="criteria4"> |
-            <label for="criteria5">Criterio 5 </label> <input type="checkbox" name="criteria5" value="5" id="criteria5"> |
-          </div>
+      <div class="jumbotron final-solution">
+        <h4 id="final-solution-text"></h4>
+        <br><br>
+        <p id="note"></p>
       </div>
     </div>
   </section>
-  <!-- Matriz -->
-  <section id="team" class="hide">
+
+  <!-- Footer -->
+  <footer>
     <div class="container">
       <div class="row">
-        <div class="col-lg-12 text-center">
-          <h2 class="section-heading text-uppercase"><i class="fa fa-table" aria-hidden="true"></i> Matriz</h2>
-          <h3 class="section-subheading text-muted">Generador de Matriz</h3>
-          <a class="btn btn-primary btn-xl" href="#" id="matrix">Generar matriz <i class="fa fa-pie-chart" aria-hidden="true"></i></a>
+        <div class="col-md-4">
+          <span class="copyright">Copyright &copy; Case Solver 2018</span>
         </div>
       </div>
-      <br>
-      <div class="row">
-        <table class="table table-bordered hide" id="dataTable" width="100%" cellspacing="0">
-          <thead class="text-center">
-            <tr class="table-header">
-              <th><i class="fa fa-cogs"></i> Criterios</th>
-              <th id="H1">Solución 1</th>
-              <th id="H2">Solución 2</th>
-              <th id="H3">Solución 3</th>
-            </tr>
-          </thead>
-          <tbody class="text-center">
-            <tr class="table-objectives">
-              <td id="Ti1">Objetivo</td>
-              <td id="O1"> <input type="number" value="0" class="input_matrix" min="0" max="5"> </td>
-              <td id="O2"> <input type="number" value="0" class="input_matrix" min="0" max="5"> </td>
-              <td id="O3"> <input type="number" value="0" class="input_matrix" min="0" max="5"> </td>
-            </tr>
-            <tr class="table-alternatives">
-              <td id="Ti2">Alternativa</td>
-              <td id="A1"><input type="number" value="0" class="input_matrix" min="0" max="5"> </td>
-              <td id="A2"><input type="number" value="0" class="input_matrix" min="0" max="5"> </td>
-              <td id="A3"><input type="number" value="0" class="input_matrix" min="0" max="5"> </td>
-            </tr>
-            <tr class="table-consecuencies">
-              <td id="Ti3">Consecuencia</td>
-              <td id="C1"><input type="number" value="0" class="input_matrix" min="0" max="5"> </td>
-              <td id="C2"><input type="number" value="0" class="input_matrix" min="0" max="5"> </td>
-              <td id="C3"><input type="number" value="0" class="input_matrix" min="0" max="5"> </td>
-            </tr>
-            <tr class="table-uncertainty">
-              <td id="Ti4">Incertidumbre</td>
-              <td id="U1"><input type="number" value="0" class="input_matrix" min="0" max="5"> </td>
-              <td id="U2"><input type="number" value="0" class="input_matrix" min="0" max="5"> </td>
-              <td id="U3"><input type="number" value="0" class="input_matrix" min="0" max="5"> </td>
-            </tr>
-            <tr class="table-risk">
-              <td id="Ti5">Riesgo</td>
-              <td id="R1"><input type="number" value="0" class="input_matrix" min="0" max="5"> </td>
-              <td id="R2"><input type="number" value="0" class="input_matrix" min="0" max="5"> </td>
-              <td id="R3"><input type="number" value="0" class="input_matrix" min="0" max="5"> </td>
-            </tr>
-            <tr class="table-information">
-              <td id="Ti6">Información</td>
-              <td id="I1"><input type="number" value="0" class="input_matrix" min="0" max="5"> </td>
-              <td id="I2"><input type="number" value="0" class="input_matrix" min="0" max="5"> </td>
-              <td id="I3"><input type="number" value="0" class="input_matrix" min="0" max="5"> </td>
-            </tr>
-            <tr class="table-total">
-              <th><a class="btn btn-primary" href="#solution" id="total">Resolver</a></th>
-              <td id="T1"></td>
-              <td id="T2"></td>
-              <td id="T3"></td>
-            </tr>
-          </tbody>
-        </table>
-      </div>
-    </section>
+    </div>
+  </footer>
 
-    <!-- Final Solution -->
-    <section id="solution" class="odd hide">
-      <div class="container">
-        <div class="row">
-          <div class="col-lg-12 text-center">
-            <h2 class="section-heading text-uppercase"><i class="fa fa-area-chart" aria-hidden="true"></i> Solución</h2>
-            <h3 class="section-subheading text-muted">Resolución final</h3>
-          </div>
-        </div>
-        <div class="jumbotron final-solution">
-          <h4 id="final-solution-text"></h4>
-          <br><br>
-          <p id="note"></p>
-        </div>
-      </div>
-    </section>
+  <!-- Bootstrap core JavaScript -->
+  <script src="vendor/jquery/jquery.min.js"></script>
+  <script src="vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
 
-    <!-- Footer -->
-    <footer>
-      <div class="container">
-        <div class="row">
-          <div class="col-md-4">
-            <span class="copyright">Copyright &copy; Case Solver 2018</span>
-          </div>
-        </div>
-      </div>
-    </footer>
+  <!-- Plugin JavaScript -->
+  <script src="vendor/jquery-easing/jquery.easing.min.js"></script>
 
-    <!-- Bootstrap core JavaScript -->
-    <script src="vendor/jquery/jquery.min.js"></script>
-    <script src="vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
+  <!-- Contact form JavaScript -->
+  <script src="js/jqBootstrapValidation.js"></script>
+  <script src="js/contact_me.js"></script>
 
-    <!-- Plugin JavaScript -->
-    <script src="vendor/jquery-easing/jquery.easing.min.js"></script>
+  <!-- Custom scripts for this template -->
+  <script src="js/agency.min.js"></script>
 
-    <!-- Contact form JavaScript -->
-    <script src="js/jqBootstrapValidation.js"></script>
-    <script src="js/contact_me.js"></script>
+  <!-- Custom scripts for this template -->
+  <script src="js/main.js"></script>
+</body>
 
-    <!-- Custom scripts for this template -->
-    <script src="js/agency.min.js"></script>
-
-    <!-- Custom scripts for this template -->
-    <script src="js/main.js"></script>
-  </body>
-
-  </html>
+</html>
